--- a/calibrate.html
+++ b/calibrate.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Map calibration — control points</title>
+  <title>Hancock Explore — Map calibration</title>
+  <meta name="description" content="Calibrate the map: add control points (name, lat, lon) and export controls.json for the conversion script.">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <style>
     :root {
       --bg: #1a1a1a;
@@ -45,7 +47,6 @@
     .map-img {
       display: block;
       cursor: crosshair;
-      vertical-align: top;
       /* No max-width: image keeps natural size (3050px) so horizontal scroll works */
     }
     .scroll { position: relative; }
