--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Explore — 4K portrait projection</title>
+  <title>Hancock Explore — Portrait map projection</title>
+  <meta name="description" content="Live portrait map projection: archaeological finds on a 3050×3840 canvas with animated points and overlay panels.">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <style>
     * { box-sizing: border-box; }
     html, body { margin: 0; padding: 0; overflow: hidden; background: #000; }
